# LSS-ROS2-Hexapod

./: CMakeLists.txt  README.md  package.xml
action/: Rotate.action  Walk.action
config/: hexapod.yaml  lss_hexapod.rviz  robot_control.yaml  robot_dynamics.yaml
launch/: battery.launch.py  hexapod.launch.py  motion.launch.py  urdf-only.launch.py
lss_hexapod/: __init__.py  hexapod-radio-control.py  hexapod.py  joint.py  leg.py  polar.py  robot.py  ros_trajectory_builder.py  tween.py
meshes/: ASB-28-C-1.stl  ASB-30-C-1.stl  ASB-37-C-1.stl  ASB-39-A-1.stl  ASB-40-A-1.stl  CF-Foot.dae  CF-TUBE-16x14xXXXmm-1.stl  HUB-22-1.stl  LSS-IH-1.stl  LSS-Servo-Aluminum.dae  SES-V2-Hexapod-Center-Frame.stl
msg/: Motion.msg
scripts/: hexapod
src/: hexapod-radio-control.py  hexapod.py  hexapod2.py  leg.py  noisy.py  polar.py  robot.py  ros_trajectory_builder.py  tf_conv.py  trajectory.py  tween.py
urdf/: hexapod.ros2_control.xacro  hexapod.yaml  lss_hexapod.srdf  lss_hexapod.xacro.urdf
