<package format="3">
  <name>lss_hexapod</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Hexapod</p>
    <p>This package contains configuration data, 3D models and launch files
for SES v2 Hexapod Kit</p>
  </description>
  <author>colin@flyingeinstein.com</author>
  <maintainer email="colin@flyingeinstein.com" />
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>robot_model_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
     <build_type>ament_cmake</build_type>
     <gazebo_ros gazebo_plugin_path="${prefix}/lib" />
     <gazebo_ros gazebo_model_path="${prefix}/.." />
    <gazebo_ros gazebo_media_path="${prefix}/worlds" />
  </export>
</package>
